# cps-anomaly-pipeline

./: .gitignore  .yamllint  EDA.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: eda_hai.ipynb
results/: eval_metrics.json  lstm_ae_metrics.json
src/cps_anomaly_pipeline/: __init__.py  baseline.py  device.py  eval_report.py  evaluate.py  fingerprint.py  gold.py  ingest.py  model_lstm_ae.py  paths.py  pipeline.py  schema.py  scoring.py  silver.py  train.py  windowing.py
tests/: test_baseline.py  test_eval_report.py  test_evaluate.py  test_gold.py  test_ingest.py  test_model_lstm_ae.py  test_scoring.py  test_silver.py  test_train.py  test_windowing.py
